projects/rylogic/Rylogic.Gfx/src/View3d/View3d.cs


		/// <summary>Delete all objects, filtered by 'context_ids'</summary>
		public void DeleteObjects(Func<Guid, bool> pred)
		{
			var pred_cb = new GuidPredCB { m_cb = (IntPtr ctx, ref Guid guid) => pred(guid) };
			View3D_DeleteById(pred_cb);
		}

		/// <summary>Release all objects not displayed in any windows (filtered by 'context_ids')</summary>
		public void DeleteUnused(GuidPredCB pred)
		{
			View3D_DeleteUnused(pred);
		}

		/// <summary>Return the context id for objects created from file 'filepath' (or null if 'filepath' is not an existing source)</summary>
		public static Guid ContextIdFromFilepath(string filepath)
		{
			return View3D_ContextIdFromFilepath(filepath);
		}

		/// <summary>Enumerate the sources in the store</summary>
		public void EnumSources(Action<Source> cb)
		{
			EnumSources(src => { cb(src); return true; });
		}
		public void EnumSources(Func<Source, bool> cb)
		{
			var enum_cb = new EnumGuidsCB { m_cb = (IntPtr ctx, ref Guid guid) => cb(new Source(guid, this)) };
			View3D_EnumSources(enum_cb);
		}

		/// <summary>Return info about a source given by context id</summary>
		public SourceInfo SourceInformation(Guid context_id)
		{
			return new SourceInfo(View3D_SourceInfo(ref context_id));
		}

		/// <summary>Return the example Ldr script</summary>
		public static string ExampleScript => View3D_ExampleScriptBStr();

		/// <summary>Template descriptions for auto complete of LDraw script</summary>
		public static string AutoCompleteTemplates => View3D_AutoCompleteTemplatesBStr();

		/// <summary>Return the address (form: keyword.keyword...) within a script at 'position'</summary>
		public static string AddressAt(string ldr_script, long position = -1)
		{
			// 'script' should start from a root level position.
			// 'position' should be relative to 'script'
			return View3D_ObjectAddressAt(ldr_script, position != -1 ? position : ldr_script.Length) ?? string.Empty;
		}

		#region DLL extern functions

		private const string Dll = "view3d-12";

		/// <summary>True if the view3d dll has been loaded</summary>
		public static bool ModuleLoaded => m_module != IntPtr.Zero;
		private static IntPtr m_module = IntPtr.Zero;

		/// <summary>The exception created if the module fails to load</summary>
		public static System.Exception? LoadError;

		/// <summary>Helper method for loading the view3d.dll from a platform specific path</summary>
		public static bool LoadDll(string dir = @".\lib\$(platform)\$(config)", bool throw_if_missing = true)
		{
			if (ModuleLoaded) return true;
			m_module = Win32.LoadDll(Dll + ".dll", out LoadError, dir, throw_if_missing);
			return m_module != IntPtr.Zero;
		}

		// Dll Context ****************************

		// Initialise calls are reference counted and must be matched with Shutdown calls
		// 'initialise_error_cb' is used to report dll initialisation errors only (i.e. it isn't stored)
		// Note: this function is not thread safe, avoid race calls
		[DllImport(Dll)] private static extern HContext View3D_Initialise(ReportErrorCB global_error_cb);
		[DllImport(Dll)] private static extern void View3D_Shutdown(HContext context);

		// This error callback is called for errors that are associated with the dll (rather than with a window).
		[DllImport(Dll)] private static extern void View3D_GlobalErrorCBSet(ReportErrorCB error_cb, bool add);

		// Set the callback for progress events when script sources are loaded or updated
		[DllImport(Dll)] private static extern void View3D_ParsingProgressCBSet(ParsingProgressCB progress_cb, bool add);

		// Set the callback that is called when the sources are reloaded
		[DllImport(Dll)] private static extern void View3D_SourcesChangedCBSet(SourcesChangedCB sources_changed_cb, bool add);

		// Return the context id for objects created from 'filepath' (if filepath is an existing source)
		[DllImport(Dll)] private static extern Guid View3D_ContextIdFromFilepath([MarshalAs(UnmanagedType.LPStr)] string filepath);

		// Data Sources ***************************

		// Add an ldr script source. This will create all objects with context id 'context_id' (if given, otherwise an id will be created). Concurrent calls are thread safe.
		[DllImport(Dll)] private static extern Guid View3D_LoadScriptFromString([MarshalAs(UnmanagedType.LPStr)] string ldr_script, ref Guid context_id, ref Includes includes, AddCompleteCB on_add_cb);
		[DllImport(Dll)] private static extern Guid View3D_LoadScriptFromFile([MarshalAs(UnmanagedType.LPStr)] string ldr_file, ref Guid context_id, ref Includes includes, AddCompleteCB on_add_cb);
		
		// Enumerate all sources in the store
		[DllImport(Dll)] private static extern void View3D_EnumSources(EnumGuidsCB enum_guids_cb);

		// Reload objects from the source associated with 'context_id'
		[DllImport(Dll)] private static extern void View3D_SourceReload(ref Guid context_id);

		// Delete all objects and remove the source associated with 'context_id'
		[DllImport(Dll)] private static extern void View3D_SourceDelete(ref Guid context_id);

		// Get information about a source
		[DllImport(Dll)] private static extern SourceInfo.Interop View3D_SourceInfo(ref Guid context_id);

		// Get/Set the name of a source
		[DllImport(Dll, CharSet = CharSet.Unicode)][return: MarshalAs(UnmanagedType.BStr)] private static extern string View3D_SourceNameGetBStr(ref Guid context_id);
		[DllImport(Dll, CharSet = CharSet.Ansi)] private static extern void View3D_SourceNameSet(ref Guid context_id, [MarshalAs(UnmanagedType.LPStr)] string name);

		// Reload script sources. This will delete all objects associated with the script sources then reload the files creating new objects with the same context ids.
		[DllImport(Dll)] private static extern void View3D_ReloadScriptSources();

		// Delete all objects and object sources
		[DllImport(Dll)] private static extern void View3D_DeleteAllObjects();
		
		// Delete all objects matching (or not matching) a context id
		[DllImport(Dll)] private static extern void View3D_DeleteById(GuidPredCB pred);

		// Delete all objects not displayed in any windows
		[DllImport(Dll)] private static extern void View3D_DeleteUnused(GuidPredCB pred);

		// Poll for changed script sources and reload any that have changed
		[DllImport(Dll)] private static extern void View3D_CheckForChangedSources();
		
		// Enable/Disable streaming script sources.
		[DllImport(Dll)] private static extern EStreamingState View3D_StreamingState();
		[DllImport(Dll)] private static extern void View3D_StreamingEnable(bool enable, int port);

		// Windows ********************************

		// Create/Destroy a window
		[DllImport(Dll)] private static extern HWindow View3D_WindowCreate(HWND hwnd, ref WindowOptions opts);
		[DllImport(Dll)] private static extern void View3D_WindowDestroy(HWindow window);

		// Add/Remove a window error callback. Note: The callback function can be called in a worker thread context.
		[DllImport(Dll)] private static extern void View3D_WindowErrorCBSet(HWindow window, ReportErrorCB error_cb, bool add);

		// Get/Set the window settings (as ldr script string)
		[DllImport(Dll, CharSet = CharSet.Unicode)][return: MarshalAs(UnmanagedType.BStr)] private static extern string View3D_WindowSettingsGetBStr(HWindow window);
		[DllImport(Dll, CharSet = CharSet.Ansi)] private static extern void View3D_WindowSettingsSet(HWindow window, [MarshalAs(UnmanagedType.LPStr)] string settings);

		// Get/Set the dimensions of the render target. Note: Not equal to window size for non-96 dpi screens!
		// In set, if 'width' and 'height' are zero, the RT is resized to the associated window automatically.
		[DllImport(Dll)] private static extern Size View3D_WindowBackBufferSizeGet(HWindow window);
		[DllImport(Dll)] private static extern void View3D_WindowBackBufferSizeSet(HWindow window, Size size, bool force_recreate);

		// Get/Set the window viewport (and clipping area)
		[DllImport(Dll)] private static extern Viewport View3D_WindowViewportGet(HWindow window);
		[DllImport(Dll)] private static extern void View3D_WindowViewportSet(HWindow window, ref Viewport vp);

		// Set a notification handler for when a window setting changes
		[DllImport(Dll)] private static extern void View3D_WindowSettingsChangedCB(HWindow window, SettingsChangedCB settings_changed_cb, bool add);

		// Add/Remove a callback that is called when the collection of objects associated with 'window' changes
		[DllImport(Dll)] private static extern void View3D_WindowSceneChangedCB(HWindow window, SceneChangedCB scene_changed_cb, bool add);

		// Add/Remove a callback that is called just prior to rendering the window
		[DllImport(Dll)] private static extern void View3D_WindowRenderingCB(HWindow window, RenderingCB rendering_cb, bool add);

		// Add/Remove an object to/from a window
		[DllImport(Dll)] private static extern void View3D_WindowAddObject(HWindow window, HObject obj);
		[DllImport(Dll)] private static extern void View3D_WindowRemoveObject(HWindow window, HObject obj);

		// Add/Remove a gizmo to/from a window
		[DllImport(Dll)] private static extern void View3D_WindowAddGizmo(HWindow window, HGizmo giz);
		[DllImport(Dll)] private static extern void View3D_WindowRemoveGizmo(HWindow window, HGizmo giz);

		// Add/Remove objects by context id. This function can be used to add all objects either in, or not in 'context_ids'
		[DllImport(Dll)] private static extern void View3D_WindowAddObjectsById(HWindow window, GuidPredCB pred);
		[DllImport(Dll)] private static extern void View3D_WindowRemoveObjectsById(HWindow window, GuidPredCB pred);

		// Remove all objects 'window'
		[DllImport(Dll)] private static extern void View3D_WindowRemoveAllObjects(HWindow window);

		// Enumerate the sources associated with 'window'
		[DllImport(Dll)] private static extern void View3D_WindowEnumGuids(HWindow window, EnumGuidsCB enum_guids_cb);

		// Enumerate the objects associated with 'window'
		[DllImport(Dll)] private static extern void View3D_WindowEnumObjects(HWindow window, EnumObjectsCB enum_objects_cb);
		[DllImport(Dll)] private static extern void View3D_WindowEnumObjectsById(HWindow window, EnumObjectsCB enum_objects_cb, GuidPredCB pred);

		// Return true if 'object' is among 'window's objects
		[DllImport(Dll)] private static extern bool View3D_WindowHasObject(HWindow window, HObject obj, bool search_children);

		// Return the number of objects assigned to 'window'
		[DllImport(Dll)] private static extern int View3D_WindowObjectCount(HWindow window);

		// Return the bounds of a scene
		[DllImport(Dll)] private static extern BBox View3D_WindowSceneBounds(HWindow window, ESceneBounds bounds, int except_count, [MarshalAs(UnmanagedType.LPArray)] Guid[]? except);

		// Render the window
		[DllImport(Dll)] private static extern void View3D_WindowRender(HWindow window);

		// Wait for any previous frames to complete rendering within the GPU
		[DllImport(Dll)] private static extern void View3D_WindowGSyncWait(HWindow window);

		// Replace the swap chain buffers with 'targets'
		[DllImport(Dll)] private static extern void View3D_WindowCustomSwapChain(HWindow window, int count, [MarshalAs(UnmanagedType.LPArray)] HTexture[] targets);

		// Get the MSAA back buffer (render target + depth stencil)
		[DllImport(Dll)] private static extern BackBuffer View3D_WindowRenderTargetGet(HWindow window);

		// Signal the window is invalidated. This does not automatically trigger rendering. Use InvalidatedCB.
		[DllImport(Dll)] private static extern void View3D_WindowInvalidate(HWindow window, bool erase);
		[DllImport(Dll)] private static extern void View3D_WindowInvalidateRect(HWindow window, ref Win32.RECT rect, bool erase);

		// Register a callback for when the window is invalidated. This can be used to render in response to invalidation, rather than rendering on a polling cycle.
		[DllImport(Dll)] private static extern void View3D_WindowInvalidatedCB(HWindow window, InvalidatedCB invalidated_cb, bool add);
